feath: Atualizando o Docker

--- a/nestjs-crud-app-2/Dockerfile
+++ b/nestjs-crud-app-2/Dockerfile
@@ -23,6 +23,9 @@ RUN npm ci --prefer-offline --no-audit --progress=false \
 # Copy source code
 COPY . .
 
+# Copy test files and configs
+COPY ./test ./test
+
 # Build the application
 RUN npm run build
 
